# projeto-intranet

./: .gitignore  README.md  index.html
api/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
api/data/examples/: colaboradores.csv  escalas.xlsx  eventos.xlsx  ferias.xlsx  folgas.xlsx
api/src/srv_intranet_api/: main.py  schemas.py  settings.py
api/src/srv_intranet_api/routers/: sheets.py
api/src/srv_intranet_api/services/: sheets.py
api/tests/: test_api.py  test_sheets_service.py
css/: style.css
js/: main.js  noticias.json  plantao.json  status-processamento-desempenho.json
modelos-tabelas/: eventos.xlsx
web/: README.md  index.html  package.json  pnpm-lock.yaml  testes.html  vite.config.js
web/css/: style.css
web/js/: main.js  noticias.json
