[project]
name = "srv-intranet-api"
version = "0.1.0"
description = ""
authors = [{ name = "gvalves", email = "gustavo.alves@igen.org.br" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.47.0,<0.48.0)",
    "polars (>=1.40.1,<2.0.0)",
    "fastexcel (>=0.20.2,<0.21.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "srv_intranet_api", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.13,<0.16.0)"
]
